// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading renders loading spinner with message 1`] = `
<div>
  <div
    class="flex size-full flex-col items-center justify-center text-white"
  >
    <div
      class="text-3xl"
    >
      test message
    </div>
    <img
      alt=""
      data-nimg="1"
      decoding="async"
      height="48"
      loading="lazy"
      src="/loader.svg"
      style="color: transparent;"
      width="48"
    />
  </div>
</div>
`;

exports[`Loading renders loading spinner with no message 1`] = `
<div>
  <div
    class="flex size-full flex-col items-center justify-center text-white"
  >
    <div
      class="text-3xl"
    />
    <img
      alt=""
      data-nimg="1"
      decoding="async"
      height="48"
      loading="lazy"
      src="/loader.svg"
      style="color: transparent;"
      width="48"
    />
  </div>
</div>
`;
